scripts/nullness/annotator/url27db8982cd_leohinterlang_argFace_tgz-pJ8-com_fidelis_argface_ArgSampleJ8.txt
../annotator/url27db8982cd_leohinterlang_argFace_tgz-pJ8-com_fidelis_argface_ArgSampleJ8/src/com/fidelis/argface/ArgParseUsage.java:13: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url27db8982cd_leohinterlang_argFace_tgz-pJ8-com_fidelis_argface_ArgSampleJ8/src/com/fidelis/argface/ArgSample.java:8: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url27db8982cd_leohinterlang_argFace_tgz-pJ8-com_fidelis_argface_ArgSampleJ8/src/com/fidelis/argface/BaseModel.java:10: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url27db8982cd_leohinterlang_argFace_tgz-pJ8-com_fidelis_argface_ArgSampleJ8/src/com/fidelis/argface/ArgParseUsage.java:45: error: cannot find symbol
    @Initializer public boolean parse (String usage) {
     ^
  symbol:   class Initializer
  location: class ArgParseUsage
../annotator/url27db8982cd_leohinterlang_argFace_tgz-pJ8-com_fidelis_argface_ArgSampleJ8/src/com/fidelis/argface/ArgSample.java:460: error: cannot find symbol
    @Initializer private void setArgumentVariables (ArgFace argFace) {
     ^
  symbol:   class Initializer
  location: class ArgSample
../annotator/url27db8982cd_leohinterlang_argFace_tgz-pJ8-com_fidelis_argface_ArgSampleJ8/src/com/fidelis/argface/BaseModel.java:100: error: cannot find symbol
	@Initializer @Override
	 ^
  symbol:   class Initializer
  location: class BaseModel
Note: ../annotator/url27db8982cd_leohinterlang_argFace_tgz-pJ8-com_fidelis_argface_ArgSampleJ8/src/com/fidelis/argface/ArgCommand.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
6 errors
